updated styling and added clearfix to prevent awkward wrapping with uneven image thumbnails

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ h4{
 	font-size: 1em;
 	position: relative;
 	top: .2em;
+	padding-left: 2em;
 }
 
 .navbar-brand{
